chore: add demo

--- a/packages/uikit-widget/index.html
+++ b/packages/uikit-widget/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
-<script src="./src/index.ts"></script>
+<script type="module" src="./src/index.tsx"></script>
 <body>
     <div id="root"></div>
     <h1>Hello Smarty UI</h1>
